fix broken css

--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -484,8 +484,10 @@
     }
 
     span.small-stars {
-        line-height: 22px;
+        //line-height: 22px;
         font-size: 1em;
+        display: inline-block;
+        height: 30px;
     }
 
     .big-stars {
